<resources>
    <string name="app_name">BunkMate</string>
    <string name="title">Title</string>
    <string name="percent_attendance">%d%%</string>
    <string name="press_if_not_attended">press if not attended</string>
    <string name="percentage">Percentage</string>
    <string name="press_if_attended">press_if_attended</string>
    <string name="add_subject">Add subject</string>
    <string name="about">About</string>
    <string name="total_lectures_conducted">Total lectures conducted: %d</string>
    <string name="total_lectures_attended">Total lectures attended: %d</string>
    <string name="delete_item">delete item</string>
    <string name="there_are_no_items_to_track">There are no items to track 🙂</string>
    <string name="added">Added</string>
    <string name="enter_a_valid_subject_name">Enter a valid subject name</string>
    <string name="deleted">Deleted</string>
    <string name="subject">Subject</string>
    <string name="classes_attended">Classes attended</string>
    <string name="classes_conducted">Classes Conducted</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="created_and_maintained_by">Created and maintained by</string>
    <string name="version">version 2023.02</string>
    <string name="contact_me">Contact me</string>
    <string name="prateek_thakur">Prateek Thakur</string>
    <string name="history">History</string>
    <string name="date_time">Date Time</string>
    <string name="status">Status</string>
    <string name="title_activity_history">HistoryActivity</string>
    <string name="time_table">Time table</string>
</resources>