<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/item_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardBackgroundColor="@color/shadow_black"
    android:layout_margin="10dp"
    app:cardCornerRadius="12dp"
    app:cardElevation="12dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxWidth="200dp"
                android:text="@string/title"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/percentage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxWidth="200dp"
                android:text="@string/percentage"
                android:textColor="@color/white"
                android:textSize="16sp" />

        </LinearLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/button_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:layout_toStartOf="@+id/button_mark"
            android:layout_centerVertical="true"
            android:backgroundTint="@color/red"
            android:src="@drawable/ic_clear"
            android:contentDescription="@string/press_if_not_attended"
            app:rippleColor="@color/white"
            app:backgroundTint="@color/white"
            tools:ignore="RelativeOverlap" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/button_mark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:backgroundTint="@color/green"
            android:src="@drawable/ic_done"
            app:rippleColor="@color/white"
            app:backgroundTint="@color/white"
            android:contentDescription="@string/press_if_attended" />

    </RelativeLayout>

</com.google.android.material.card.MaterialCardView>